Remove bookmarks, avoid triple inclusion of bootstrap, fix spacing in the facets

--- a/app/assets/stylesheets/rism_theme.scss
+++ b/app/assets/stylesheets/rism_theme.scss
@@ -173,6 +173,10 @@ h3 {
   margin-top: 0.5em; //consisten with BL
 }
 
+h3.card-header {
+  margin-top: 0px; //consisten with BL
+}
+
 h4 {
   font-size: 16px;
 }
@@ -441,4 +445,8 @@ tr.row {
   margin-right: 0px;
   margin-left: 0px;
   line-height: 1.3;
+}
+
+.documents-list .document {
+  border-bottom: none;
 }
